<resources>
    <string name="app_name" translatable="false">ProgressArchiver95</string>
    <string name="pb95_not_found">Progressbar95 not found…</string>
    <string name="copy_base">Copy base.apk</string>
    <string name="copy_dpis">Copy DPIs</string>
    <string name="abis_found" translatable="false">ABIs:\n</string>
    <string name="armeabi_v7a" translatable="false">ARMv7\n</string>
    <string name="arm64_v8a" translatable="false">ARMv8\n</string>
    <string name="x86_64" translatable="false">x86_64\n</string>
    <string name="x86" translatable="false">x86\n</string>
    <string name="dpis_found" translatable="false">DPIs:\n</string>
    <string name="nodpi" translatable="false">NODPI\n</string>
    <string name="tvdpi" translatable="false">TVDPI\n</string>
    <string name="xxxhdpi" translatable="false">XXXHDPI\n</string>
    <string name="xxhdpi" translatable="false">XXHDPI\n</string>
    <string name="xhdpi" translatable="false">XHDPI\n</string>
    <string name="hdpi" translatable="false">HDPI\n</string>
    <string name="mdpi" translatable="false">MDPI\n</string>
    <string name="ldpi" translatable="false">LDPI\n</string>
    <string name="archive_button_text">ARCHIVE</string>
    <string name="searching_label">Searching…</string>
    <string name="files_found_at">Game files were found\n(click to see path)</string>
    <string name="version_label">"Version "</string>
    <string name="no_abis_found">No ABIs were found. Please try old archive mode.</string>
    <string name="old_archive_mode">Old archive mode</string>
    <string name="old_archive_mode_started">Old archive mode started</string>
    <string name="unknown">Unknown</string>
    <string name="about">About</string>
    <string name="about_content">ProgressArchiver95 v0.7.0\n\nCredits:\n    Original Creator: Luihum#1287\n    Logo: SamCool939\n    Testing: Lol Guy (Android 10)\n    Special Thanks: Christian230102\n    Translators:\n    Portuguese (Brazil) - Luihum\n    Indonesian - SamCool939\n    \nHow to use:\nSimply select the APKs you want to archive and click the Archive button.\nA list of ABIs and DPIs that were found on your device is available.\nYour archived versions are stored internally and made available through the standard SAF interface, so anything that uses SAF will support ProgressArchiver95.\nSAF (Storage Access Framework) is used in many apps to select files, such as Discord, Chrome, Termux, Firefox, and the built-in Files app.\nIf you don\'t see it, the apps are debuggable, so you can use ADB to extract the files from internal storage. Contact me (Luihum#1287) for instructions on this. \nOld archive mode only extracts the base.apk, ignoring ABIs. This is intended for versions before 0.50 before the split APK scheme.\n\nWhat are split APKs?\nRecently, Google has changed the way Android apps are distributed and installed. Previously, everything: the code, assets, DPI-optimized assets, the low-level instructions for the CPU, translations, etc. were all in one file, called the \"fat APK\". \nBut as the name suggests, fat APKs are pretty large, with lots of code and assets that weren\'t used for the specific device. This proved problematic with the size increase of apps, particularly games, which were already big, plus the unused data.\nTo fix this problem, Google developed the split APK system: the developer sends a bundle with every APK to the Play Store, and the Play Store client downloads that and unpacks only the needed files. The rest is discarded.\nNow, every app is split into various APKs:\n- base.apk, containing the shared code, assets, data and everything; the biggest file of the three parts, for Progressbar95 easily more than 90MB;\n- the ABIs: split_config.armeabi_v7a.apk, split_config.arm64_v8a.apk, split_config.x86_64.apk and split_config.x86.apk. These contain the low-level code for the CPU. Respectively, ARMv7 (on most older phones), ARMv8 (on newer phones, 64-bit), x86_64 (mostly on computers) and x86 (32-bit, on older CPUs). Progressbar95 doesn\'t support x86, but just in case ProgressArchiver95 supports it. Some phones may have multiple ABIs.\n- the DPIs: ldpi, mdpi, hdpi, xhdpi, xxhdpi, xxxhdpi, nodpi and tvdpi. These contain optimized assets for the various screen resolutions. Unlike ABIs, they\'re not strictly required, but the game looks nicer on some screens with the correct DPI file.\n- Last and least, the language APKs. There\'s many of them: en, pt, it, es, ch, jp, ru... The purpose of those is unknown.\nThe game won\'t install if the required ABI is missing, or if the base.apk is missing. Due to the way ABIs work, some versions of the game may not work on all devices.\nThis broke traditional APK extraction apps, which were designed with fat APKs in mind. So I made ProgressArchiver95, a tool specifically made to archive Progressbar95 easily.\n\n</string>
    <string name="ok" translatable="false">OK</string>
    <string name="copy_lang">Copy languages</string>
    <string name="langs_found">Languages:\n</string>
    <string name="dark_mode">Dark mode</string>
    <string name="title_settings">Settings</string>
    <string name="make_xapk">Generate XAPK</string>
    <string name="legacy_storage">Legacy storage</string>
    <string name="archive_popupfighter">Archive PB Popup Fighter</string>
    <string name="pbpopupfighter_started">Started to archive Progressbar Popup Fighter</string>

</resources>