<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.luihum.progressarchiver95.MainActivity">
    <item
        android:id="@+id/action_archive_popupfighter"
        android:orderInCategory="100"
        android:title="@string/archive_popupfighter"
        />
    <item
        android:id="@+id/action_old_archive"
        android:orderInCategory="200"
        android:title="@string/old_archive_mode"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="300"
        android:title="@string/title_settings" />1
    <item
        android:id="@+id/action_about"
        android:orderInCategory="400"
        android:title="@string/about" />

</menu>